{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 35,
  "lineage": "64770f8b-36d9-4fc5-56b6-62f8868bcb11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ebc9e780cde07dd",
            "arn": "arn:aws:ec2:ap-south-1:637423245284:instance/i-05808b65b28f5eb6c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05808b65b28f5eb6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "example-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034ef9c234e70d72f",
            "private_dns": "ip-192-168-11-40.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.11.40",
            "public_dns": "ec2-65-2-177-85.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.177.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c5e2ffedafe8fbc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0233ec7782dea47b4",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0688b3276250f54b3"
            ]
          },
          "dependencies": [
            "aws_key_pair.Pem_key",
            "aws_security_group.webserver_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ebc9e780cde07dd",
            "arn": "arn:aws:ec2:ap-south-1:637423245284:instance/i-054b2ce29df05f86d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054b2ce29df05f86d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "example-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0625768890ec8676c",
            "private_dns": "ip-192-168-11-127.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.11.127",
            "public_dns": "ec2-13-233-229-121.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.229.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1d3d9175f2766c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0233ec7782dea47b4",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0688b3276250f54b3"
            ]
          },
          "dependencies": [
            "aws_key_pair.Pem_key",
            "aws_security_group.webserver_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:security-group/sg-06d53b9401e50a81c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d53b9401e50a81c",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240525045554296600000004",
            "name_prefix": "terraform-",
            "owner_id": "637423245284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:security-group/sg-0688b3276250f54b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0688b3276250f54b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "637423245284",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:network-acl/acl-0d717a419a0de0663",
            "default_network_acl_id": "acl-0d717a419a0de0663",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d717a419a0de0663",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "637423245284",
            "subnet_ids": [
              "subnet-013f178fa2ae6e3d0",
              "subnet-0233ec7782dea47b4",
              "subnet-0eeeddbaf71ac7ee2"
            ],
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:route-table/rtb-054324e6135306488",
            "default_route_table_id": "rtb-054324e6135306488",
            "id": "rtb-054324e6135306488",
            "owner_id": "637423245284",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:security-group/sg-061612131d7ccc213",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-061612131d7ccc213",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423245284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dde74e768c7f594d",
            "arn": "arn:aws:ec2:ap-south-1:637423245284:elastic-ip/eipalloc-0dde74e768c7f594d",
            "domain": "vpc",
            "id": "eipalloc-0dde74e768c7f594d",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-227-77.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.227.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071d48e6fc17b6484",
            "arn": "arn:aws:ec2:ap-south-1:637423245284:elastic-ip/eipalloc-071d48e6fc17b6484",
            "domain": "vpc",
            "id": "eipalloc-071d48e6fc17b6484",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-120-251.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.120.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:internet-gateway/igw-00e84a311bb9764ab",
            "id": "igw-00e84a311bb9764ab",
            "owner_id": "637423245284",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dde74e768c7f594d",
            "association_id": "eipassoc-0b82c8ea798d6536b",
            "connectivity_type": "public",
            "id": "nat-0ed26cd5ae9007dce",
            "network_interface_id": "eni-098f1e387316ee010",
            "private_ip": "192.168.11.200",
            "public_ip": "13.200.227.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0233ec7782dea47b4",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071d48e6fc17b6484",
            "association_id": "eipassoc-0175a4942c4ac7e8e",
            "connectivity_type": "public",
            "id": "nat-00cc185cc17caead8",
            "network_interface_id": "eni-09de78e6c3d259ab2",
            "private_ip": "192.168.11.117",
            "public_ip": "3.111.120.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0233ec7782dea47b4",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06694d3d3d8a1fd7e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed26cd5ae9007dce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06694d3d3d8a1fd7e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044d96ad9f939ba1e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00cc185cc17caead8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044d96ad9f939ba1e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e84a311bb9764ab",
            "id": "r-rtb-0ea45c94b5e1c75f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea45c94b5e1c75f7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:route-table/rtb-06694d3d3d8a1fd7e",
            "id": "rtb-06694d3d3d8a1fd7e",
            "owner_id": "637423245284",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:route-table/rtb-044d96ad9f939ba1e",
            "id": "rtb-044d96ad9f939ba1e",
            "owner_id": "637423245284",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:route-table/rtb-0ea45c94b5e1c75f7",
            "id": "rtb-0ea45c94b5e1c75f7",
            "owner_id": "637423245284",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c677955f8efc1a0",
            "route_table_id": "rtb-06694d3d3d8a1fd7e",
            "subnet_id": "subnet-0eeeddbaf71ac7ee2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0777b07cb3893a147",
            "route_table_id": "rtb-044d96ad9f939ba1e",
            "subnet_id": "subnet-013f178fa2ae6e3d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010b3b341c0393dec",
            "route_table_id": "rtb-0ea45c94b5e1c75f7",
            "subnet_id": "subnet-0233ec7782dea47b4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:subnet/subnet-0eeeddbaf71ac7ee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeeddbaf71ac7ee2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423245284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:subnet/subnet-013f178fa2ae6e3d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f178fa2ae6e3d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423245284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:subnet/subnet-0233ec7782dea47b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0233ec7782dea47b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423245284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc3f269f598838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423245284:vpc/vpc-0a7bc3f269f598838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d717a419a0de0663",
            "default_route_table_id": "rtb-054324e6135306488",
            "default_security_group_id": "sg-061612131d7ccc213",
            "dhcp_options_id": "dopt-05c5818cd265ba8b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7bc3f269f598838",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054324e6135306488",
            "owner_id": "637423245284",
            "tags": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "aws_vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}